// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileContent renders correctly 1`] = `
<div>
  <div />
  <div
    className="file-content"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#f5f2f0",
          "color": "black",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "black",
            "float": "left",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "paddingRight": "10px",
            "tabSize": "4",
            "textAlign": "left",
            "textShadow": "0 1px white",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          1

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          2

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          3

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          4

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          5

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          6

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          7

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          8

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          9

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          10

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          11

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          12

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          13

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          14

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          15

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          16

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          17

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          18

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          19

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          20

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          21

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          22

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          23

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          24

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          25

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          26

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          27

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          28

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          29

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          30

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          31

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          32

        </span>
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          33

        </span>
      </code>
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "black",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "textShadow": "0 1px white",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          {
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "hello"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Heya! Welcome on my portfolio."
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
         
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "It shows you what I have done and what I can do."
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "wait-what"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Ok, maybe it needs a bit of explanation."
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "You can use the file explorer on your left to open files"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "These describe some of the work I have been doing or what studies I did, etc."
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "are-you-mad"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Hehe, no. I just thought it would be"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "an original way to present myself and relevant with my expertise."
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "aint-nobody-got-time-for-that"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Ok if you can't be bothered"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "you can download directly my CV in a PDF format"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "by clicking on the PDF icon in the menu bar on the left (desktop only)"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "or click on the smiley face in the footer bar."
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "where-is-da-code"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Oh by the way, I made the source code open source."
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "You can see it here:"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "https://github.com/vincentaudebert/vatweb"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "or click on the git icon in the footer bar."
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "hey-granpa"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          :
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          [
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "Yes. I know. This code is fairly old and a bit outdated. Not even using React hooks..."
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "And it's only from june 2018!"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "But it means React is moving fast! So we can't really complain :)"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
    
        <span
          className="token"
          style={
            Object {
              "color": "#690",
            }
          }
        >
          "I will update it ASAP when I get some spare time"
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ,
        </span>
        
  
        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          ]
        </span>
        

        <span
          className="token"
          style={
            Object {
              "color": "#999",
            }
          }
        >
          }
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`FileContent renders correctly with undefined file 1`] = `
<div>
  <div />
  <div
    className="file-content"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#f5f2f0",
          "color": "black",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "textShadow": "0 1px white",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "black",
            "float": "left",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "paddingRight": "10px",
            "tabSize": "4",
            "textAlign": "left",
            "textShadow": "0 1px white",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        <span
          className="react-syntax-highlighter-line-number"
          style={Object {}}
        >
          1

        </span>
      </code>
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "black",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "textShadow": "0 1px white",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      />
    </pre>
  </div>
</div>
`;
